<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".FirstFragment">

    <ImageView
        android:id="@+id/imageViewMemberDetail"
        android:layout_width="324dp"
        android:layout_height="247dp"
        android:contentDescription="@string/memberdetail"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMemberName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hello_first_fragment"
        android:textStyle="bold"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewMemberDetail" />

    <EditText
        android:id="@+id/tvDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="397dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExpresion"

        />

    <EditText
        android:id="@+id/tvExpresion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="365dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMatricula"
        />

    <EditText
        android:id="@+id/tvMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="333dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMemberName"
        />

    <Button
        android:id="@+id/btnDeleteMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/borrar"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUpdateMember"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/btnUpdateMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDirection"
        app:layout_constraintVertical_bias="0.405" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>